upgrade:: handle get employee in shift and dont in
