# server/service_workforce/cmd/swag/docs/swagger.yaml
@@ -159,6 +159,26 @@ definitions:
       error:
         type: string
     type: object
+  dto.GetInfoEmployeeDonotInShiftReq:
+    properties:
+      page:
+        minimum: 1
+        type: integer
+      shift_id:
+        type: string
+    required:
+    - shift_id
+    type: object
+  dto.GetInfoEmployeeInShiftReq:
+    properties:
+      page:
+        minimum: 1
+        type: integer
+      shift_id:
+        type: string
+    required:
+    - shift_id
+    type: object
   dto.ResponseData:
     properties:
       code:
@@ -221,7 +241,7 @@ info:
   title: Swagger Chat Service Auth REST API
   version: "1.0"
 paths:
-  /api/v1/employee/shift:
+  /v1/employee/shift:
     post:
       consumes:
       - application/json
@@ -252,7 +272,7 @@ paths:
       summary: Get shift user effective date information
       tags:
       - Shift
-  /api/v1/employee/shift/add:
+  /v1/employee/shift/add:
     post:
       consumes:
       - application/json
@@ -283,7 +303,7 @@ paths:
       summary: Create shift information
       tags:
       - Shift
-  /api/v1/employee/shift/add/list:
+  /v1/employee/shift/add/list:
     post:
       consumes:
       - application/json
@@ -314,7 +334,7 @@ paths:
       summary: Add shift employee list
       tags:
       - Shift
-  /api/v1/employee/shift/delete:
+  /v1/employee/shift/delete:
     post:
       consumes:
       - application/json
@@ -345,7 +365,7 @@ paths:
       summary: Delete shift employee
       tags:
       - Shift
-  /api/v1/employee/shift/disable:
+  /v1/employee/shift/disable:
     post:
       consumes:
       - application/json
@@ -376,32 +396,7 @@ paths:
       summary: Disable shift for user
       tags:
       - Shift
-  /api/v1/employee/shift/employee/{id}:
-    get:
-      consumes:
-      - application/json
-      description: Get info employee in shift for company
-      parameters:
-      - description: Bearer <token>
-        in: header
-        name: authorization
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/dto.ResponseData'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/dto.ErrResponseData'
-      summary: Get info employee in shift
-      tags:
-      - Shift
-  /api/v1/employee/shift/enable:
+  /v1/employee/shift/enable:
     post:
       consumes:
       - application/json
@@ -432,7 +427,69 @@ paths:
       summary: Enable shift for user
       tags:
       - Shift
-  /api/v1/shift:
+  /v1/employee/shift/in:
+    post:
+      consumes:
+      - application/json
+      description: Get info employee in shift for company
+      parameters:
+      - description: Bearer <token>
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: Get Info Employee In Shift Request
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GetInfoEmployeeInShiftReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrResponseData'
+      summary: Get info employee in shift
+      tags:
+      - Shift
+  /v1/employee/shift/not_in:
+    post:
+      consumes:
+      - application/json
+      description: Get info employee donot in shift for company
+      parameters:
+      - description: Bearer <token>
+        in: header
+        name: authorization
+        required: true
+        type: string
+      - description: Get Info Employee Donot In Shift Request
+        in: body
+        name: dto
+        required: true
+        schema:
+          $ref: '#/definitions/dto.GetInfoEmployeeDonotInShiftReq'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.ResponseData'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrResponseData'
+      summary: Get info employee donot in shift
+      tags:
+      - Shift
+  /v1/shift:
     get:
       consumes:
       - application/json
@@ -491,7 +548,7 @@ paths:
       summary: Create shift information
       tags:
       - Shift
-  /api/v1/shift/{id}:
+  /v1/shift/{id}:
     delete:
       consumes:
       - application/json
@@ -545,7 +602,7 @@ paths:
       summary: Get shift detail information
       tags:
       - Shift
-  /api/v1/shift/edit:
+  /v1/shift/edit:
     post:
       consumes:
       - application/json
@@ -576,7 +633,7 @@ paths:
       summary: Edit shift information
       tags:
       - Shift
-  /api/v1/shift/status:
+  /v1/shift/status:
     post:
       consumes:
       - application/json
@@ -607,7 +664,7 @@ paths:
       summary: Change status shift
       tags:
       - Shift
-  /api/v1/user/edit/effective:
+  /v1/user/edit/effective:
     post:
       consumes:
       - application/json
